# backend/internal/api/http/v1/auth/handlers.go
@@ -25,15 +25,96 @@ func NewAuthHandler(service services.UserService, config config.JWT) *Handler {
 	return &Handler{service: service, config: config}
 }
 
+type TokenPair struct {
+	Access  string
+	Refresh string
+}
+
+func (h *Handler) generateTokenPair(userId int) (pair TokenPair, err error) {
+	payload := jwt.NewPayload(strconv.Itoa(userId))
+	accessToken, err := payload.CreateJwt(
+		h.config.AccessSecret,
+		time.Second*time.Duration(h.config.AccessExp),
+	)
+	if err != nil {
+		return
+	}
+
+	refresh, err := payload.CreateJwt(
+		h.config.RefreshSecret,
+		time.Second*time.Duration(h.config.RefreshExp),
+	)
+	if err != nil {
+		return
+	}
+
+	return TokenPair{accessToken, refresh}, nil
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginResponse struct {
+	Access  string `json:"accessToken"`
+	Refresh string `json:"refreshToken"`
+}
+
+// Login handles user login and returns access and refresh tokens
+// @Summary Login a user and return tokens
+// @Description Login a user using email and password and return access and refresh tokens
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param loginRequest body LoginRequest true "Login credentials"
+// @Success 200 {object} LoginResponse "Successfully logged in"
+// @Failure 400 "Invalid input"
+// @Failure 401 "User not found"
+// @Failure 401 "Invalid password"
+// @Failure 500 "Internal server error"
+// @Router /auth/login [post]
+func (h *Handler) Login(c *gin.Context) {
+	var request LoginRequest
+
+	if err := c.ShouldBindJSON(&request); err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user, err := h.service.GetByEmail(request.Email)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "no such user"})
+		return
+	}
+
+	if !crypto.CheckPasswordHash(request.Password, user.HashedPassword) {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "invalid password"})
+		return
+	}
+
+	userId := int(user.ID)
+	pair, err := h.generateTokenPair(userId)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	response := LoginResponse{
+		Access:  pair.Access,
+		Refresh: pair.Refresh,
+	}
+	c.JSON(http.StatusOK, response)
+}
+
 type Token = string
 
 type RefreshRequest struct {
-	Access  Token `json:"access_token" binding:"required"`
-	Refresh Token `json:"refresh_token" binding:"required"`
+	Access  Token `json:"accessToken" binding:"required"`
+	Refresh Token `json:"refreshToken" binding:"required"`
 }
 
 type ResponseRefresh struct {
-	Access Token `json:"access_token"`
+	Access Token `json:"accessToken"`
 }
 
 // Refresh godoc
@@ -88,15 +169,15 @@ func (h *Handler) Refresh(c *gin.Context) {
 }
 
 type RegisterRequest struct {
-	Email          string `json:"email"`
-	FirstName      string `json:"first_name"`
-	SecondName     string `json:"second_name"`
-	Password       string `json:"password"`
-	VerifyPassword string `json:"verify_password"`
+	Email           string `json:"email" binding:"required,email"`
+	FirstName       string `json:"first_name"`
+	SecondName      string `json:"second_name"`
+	Password        string `json:"password" binding:"required"`
+	ConfirmPassword string `json:"confirmPassword" binding:"required"`
 }
 type RegisterResponse struct {
-	Access  Token `json:"access_token"`
-	Refresh Token `json:"refresh_token"`
+	Access  string `json:"accessToken"`
+	Refresh string `json:"refreshToken"`
 }
 
 // Register Register -   .
@@ -115,7 +196,7 @@ func (h *Handler) Register(c *gin.Context) {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "invalid input"})
 		return
 	}
-	if request.Password != request.VerifyPassword {
+	if request.Password != request.ConfirmPassword {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "passwords do not match"})
 		return
 	}
@@ -135,22 +216,14 @@ func (h *Handler) Register(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	payload := jwt.NewPayload(strconv.Itoa(int(user.ID)))
-	accessToken, err := payload.CreateJwt(
-		h.config.AccessSecret,
-		time.Second*time.Duration(h.config.AccessExp),
-	)
+	pair, err := h.generateTokenPair(int(user.ID))
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	refresh, err := payload.CreateJwt(
-		h.config.RefreshSecret,
-		time.Second*time.Duration(h.config.RefreshExp),
-	)
 	response := RegisterResponse{
-		Access:  accessToken,
-		Refresh: refresh,
+		Access:  pair.Access,
+		Refresh: pair.Refresh,
 	}
 	c.JSON(http.StatusOK, response)
 }
