# backend/internal/api/http/v1/auth/routes.go
@@ -5,6 +5,7 @@ import "github.com/gin-gonic/gin"
 func RegisterRoutes(engine *gin.Engine, handler *Handler) {
 	router := engine.Group("/auth")
 	{
+		router.POST("/login", handler.Login)
 		router.POST("/register", handler.Register)
 		router.POST("/refresh", handler.Refresh)
 	}
